# CHARISMA

./: .gitignore  LICENSE  README.md  aggregate_scores.py  behavioral_codes.py  pyproject.toml  sample_balanced_scenarios.py  streamlit_app.py
agent_performance_plots/: agent_performance_results-test.csv
app/: main.py  util.py
charisma/: __main__.py  config.py  default.toml  pipeline.py  util.py
copies/: goals_deepseek_masters__scenarios_Easy__evaluation.csv  goals_deepseek_masters__scenarios_Easy__interaction_generation.csv  goals_deepseek_masters__scenarios_Easy__interaction_generation_p1.csv  goals_deepseek_masters__scenarios_Hard__evaluation.csv  goals_deepseek_masters__scenarios_Hard__interaction_generation_p1.csv  goals_openai__scenarios_Easy__interaction_generation.csv  goals_openai__scenarios_Hard__interaction_generation.csv  gpt5_evaluation_easy.csv  gpt_mini_Easy.csv
exp1-gemini-2.5-flash-interaction_generation-Easy/: agent_performance_results.csv
exp1-gemini-2.5-flash-interaction_generation-Hard/: agent_performance_results.csv
exp1-grok-4-fast-interaction_generation-Easy/: agent_performance_results.csv
exp1-grok-4-fast-interaction_generation-Hard/: agent_performance_results.csv
exp1-mistral-medium-3.1-interaction_generation-Easy/: agent_performance_results.csv
exp1-mistral-medium-3.1-interaction_generation-Hard/: agent_performance_results.csv
experiment_1/: goals_deepseek_masters__scenarios_Easy__gemini-2.5-flash-interaction_generation.csv  goals_deepseek_masters__scenarios_Easy__grok-4-fast-interaction_generation.csv  (+10 more)
inputs/: characters.csv  (+15 more)
(+118 files in other folders)
