[project]
name = "charisma"
version = "0.1.0"
description = "Goal Achievement in Multi-agent Evaluated Social Scenarios"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "toml>=0.10.2",
    "pandas>=2.3.1",
    "openai>=1.98.0",
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.28",
    "langchain-core>=0.3.72",
    "seaborn>=0.13.2, <0.14",
    "matplotlib>=3.10.5, <3.11",
    "plotly>=6.3.1, <6.4",
    "statsmodels>=0.14.0, <0.15",
]

[dependency-groups]
dev = [
    "scikit-learn>=1.7.1",
    "streamlit>=1.49.1",
]
